# trustflow

./: .bazelrc  .clang-format  .clang-tiny  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  README.zh-CN.md  REPO_LAYOUT.md  WORKSPACE  build.sh  dev-requirements.txt  env.sh  requirements.txt  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: issue_template.yaml
.github/workflows/: sigstore.yml
bazel/: BUILD.bazel  cppcodec.BUILD  curl.BUILD  dcap.BUILD  gperftools.BUILD  httplib.BUILD  openssl.BUILD  oss_sdk.BUILD  repositories.bzl  sf_apis.BUILD  sgxsdk.BUILD  trustedflow.bzl  trustflow.bzl
bazel/patches/: cppcodec.patch  grpc.patch
cargo/: Cargo.toml  README.md
cargo/trustedflow-attestation-generator/: Cargo.toml
cargo/trustedflow-attestation-rs/: Cargo.toml  build.rs
cargo/trustedflow-attestation-rs/src/: lib.rs
cargo/trustedflow-attestation-sys/: .gitignore  Cargo.toml  bindings.h  build.rs
cargo/trustedflow-attestation-sys/src/: lib.rs
cargo/trustflow-attestation-generator/: Cargo.toml
cargo/trustflow-attestation-rs/: Cargo.toml
cargo/trustflow-attestation-rs/src/: lib.rs
cargo/trustflow-attestation-sys/: Cargo.toml
cmake/: Abseil.cmake  ApisProto.cmake  Cppcodec.cmake  CsvHeader.cmake  DcapVerifier.cmake  Emscripten.cmake  Fmtlib.cmake  Openssl.cmake  Protobuf.cmake  Pybind.cmake  SgxHeaders.cmake  Spdlog.cmake  Yacl.cmake
cmake/patch/: dcap.patch  dcap2.patch
dm_component/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.py
dm_component/componentize/: compdef.py  constants.py  main.py  tools.py
dm_component/componentize/server/: .gitignore  Cargo.toml
dm_component/componentize/server/conf/: flags.conf
dm_component/componentize/server/kuscia_proto/: Cargo.toml  build.rs
dm_component/componentize/server/kuscia_proto/src/: common.proto  custom_serde.rs  lib.rs
dm_component/componentize/server/kuscia_proto/src/datamesh/: domaindata.proto  domaindatasource.proto
dm_component/componentize/server/src/: client.rs  config.rs  constants.rs  error.rs  main.rs  service.rs  utils.rs
dm_component/componentize/server/src/client/: data_mesh_client.rs
dm_component/componentize/server/src/service/: download.rs  get_domain_data.rs  upload.rs
dm_component/componentize/server/src/utils/: log.rs
dm_component/deployment/: Dockerfile  app_image.yaml  config_templates.yml  deploy_templates.yml
docker/: .condarc  common-sim.Dockerfile  common.Dockerfile  sources.list.ubuntu20.04  sources.list.ubuntu22.04  trustedflow-dev-occlum-ubuntu20.04.Dockerfile  trustedflow-dev-ubuntu22.04.Dockerfile  trustedflow-release-occlum-ubuntu20.04.Dockerfile  trustedflow-release-ubuntu22.04.Dockerfile  trustflow-dev-ubuntu22.04.Dockerfile
docs/: build.sh  conf.py  index.rst  requirements.txt
docs/advanced_topic/: cross_domain_controll_in_tee.md  index.rst  roadmap.md
docs/architecture/: data_lineage.md  easy_trustflow.ipynb  index.rst  policy.md  principle.md
docs/development/: index.rst  new_component.ipynb
docs/quick_start/: easy_trustflow_examples.ipynb  index.rst  step0.ipynb  step1.ipynb  step2.ipynb  step3.ipynb  step4.ipynb  step5.ipynb
examples/offline-sample/: docker-compose-csv.yml  docker-compose-sim.yml  docker-compose-tdx.yml
examples/online-sample/: docker-compose-csv.yml  docker-compose-sim.yml  (+1 more)
pylib/trustedflow/attestation/verification/: BUILD.bazel  CMakeLists.txt  verifier_modules.cc
trustedflow/attestation/collateral/: BUILD.bazel  hygon_collateral.cc  hygon_collateral.h  hygon_collateral_test.cc  intel_collateral.cc  intel_collateral.h
trustedflow/attestation/generation/wrapper/: BUILD.bazel  generator_wrapper.cc  generator_wrapper.h  generator_wrapper_c_api.cc
trustedflow/attestation/verification/: BUILD.bazel  CMakeLists.txt  verifier_factory.h  wasm_binding.cc
trustedflow/attestation/verification/csv/: BUILD.bazel  csv_verifier.cc  csv_verifier.h
trustedflow/attestation/verification/interface/: BUILD.bazel  CMakeLists.txt  verifier.cc  verifier.h
trustedflow/attestation/verification/sgx2/: BUILD.bazel  CMakeLists.txt  sgx2_verifier.cc  sgx2_verifier.h
trustedflow/attestation/verification/tdx/: BUILD.bazel  CMakeLists.txt  tdx_verifier.cc  tdx_verifier.h
trustedflow/attestation/verification/wrapper/: BUILD.bazel  CMakeLists.txt  verifier_wrapper.cc  verifier_wrapper.h  verifier_wrapper_c_api.cc  verifier_wrapper_c_api.h
trustflow/attestation/collateral/: BUILD.bazel  hygon_collateral.cc  hygon_collateral.h  hygon_collateral_test.cc  intel_collateral.cc  intel_collateral.h
trustflow/attestation/generation/csv/: BUILD.bazel  csv_generator.cc  csv_generator.h
trustflow/attestation/generation/sgx2/: BUILD.bazel  sgx2_generator.cc  sgx2_generator.h
trustflow/attestation/generation/tdx/: BUILD.bazel  tdx_generator.cc  tdx_generator.h
trustflow/attestation/generation/wrapper/: BUILD.bazel  generator_wrapper.cc  generator_wrapper.h  generator_wrapper_c_api.cc  generator_wrapper_c_api.h
trustflow/attestation/utils/: BUILD.bazel
trustflow/attestation/verification/: BUILD.bazel  CMakeLists.txt  verifier_factory.h  wasm_binding.cc
trustflow/attestation/verification/csv/: BUILD.bazel  CMakeLists.txt  csv_verifier.cc  csv_verifier.h
trustflow/attestation/verification/interface/: BUILD.bazel  CMakeLists.txt  verifier.cc  verifier.h
trustflow/attestation/verification/sgx2/: BUILD.bazel  sgx2_verifier.cc  sgx2_verifier.h
trustflow/attestation/verification/tdx/: BUILD.bazel  tdx_verifier.cc  tdx_verifier.h
trustflow/attestation/verification/wrapper/: BUILD.bazel  CMakeLists.txt  verifier_wrapper.cc  verifier_wrapper.h  verifier_wrapper_c_api.cc  verifier_wrapper_c_api.h
trustflow/proxy/data_capsule_proxy/: BUILD.bazel  capsule_manager_client.cc  capsule_manager_client.h  cm_init.yaml  data_capsule_proxy.cc  data_capsule_proxy.h  main.cc  oss_client.cc  oss_client.h
trustflow/proxy/ra_proxy/: BUILD.bazel  main.cc  ra_proxy.cc  ra_proxy.h
trustflow/proxy/utils/: BUILD.bazel  crypto_util.cc  crypto_util.h  io_util.cc  io_util.h  log.cc  log.h  ra_util.cc  ra_util.h
(+113 files in other folders)
