[package]
name = "trustedflow-attestation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: remove the `path` after the package `trustedflow-attestation-sys` is published to crate.io
trustedflow-attestation-sys = { version = "0.1.0", path = "../trustedflow-attestation-sys"}

[dev-dependencies]
