[package]
name = "trustedflow-attestation-rs"
version = "0.2.0-dev240313"
edition = "2021"
description = "Trustedflow Attestation Rust Library"
license = "Apache-2.0"
repository = "https://github.com/secretflow/trustedflow.git"


[dependencies]
trustedflow-attestation-sys = { version = "0.1.1-dev240313"}
sdc_apis = "0.2.1-dev20240222"
serde_json = "1.0.114"

