[package]
name = "trustflow-attestation-rs"
version = "0.3.1-dev20241203"
edition = "2021"
description = "TrustFlow Attestation Rust Library"
license = "Apache-2.0"
repository = "https://github.com/asterinas/trustflow.git"


[dependencies]
trustflow-attestation-sys = { version = "0.3.1-dev20241104"}
sdc_apis = "=0.3.0-dev20241104"
serde_json = "1.0.114"

