[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = { version = "1.0" }
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
hyper = { version = "0.13.6", features = ["stream"] }
tokio = { version = "0.2.2", default-features = false, features = ["io-util", "macros", "rt-threaded", "sync", "fs"] }

multipart-async = { git = "https://github.com/abonander/multipart-async.git" }
kuscia_proto = { path = "kuscia_proto"}
openssl-sys = "0.9"
openssl =  { version = "0.10", features = ["vendored"] }
futures = "0.3"

clap = { version = "4.4.3", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
log4rs = "1.0.0"
rand = "0.8.5"

serde_json = "1.0.104"
thiserror = "1.0.25"
http = "0.2.9"

serde = { version = "1.0", features = ["derive"] }
url = "2.4.1"
serde_qs = "0.12.0"
lazy_static = "1.4.0"

tokio-util = { version = "0.3", features = ["codec"] }