# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@trustflow//bazel:trustflow.bzl", "trustflow_cc_library")

package(default_visibility = ["//visibility:public"])

trustflow_cc_library(
    name = "json2pb",
    hdrs = ["json2pb.h"],
    deps = [
        "@com_github_grpc_grpc//:grpc++",
        "@yacl//yacl/base:exception",
    ],
)
