# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@trustflow//bazel:trustflow.bzl", "trustflow_cc_binary", "trustflow_cc_library")

package(default_visibility = ["//visibility:public"])

trustflow_cc_library(
    name = "ra_proxy",
    srcs = ["ra_proxy.cc"],
    hdrs = ["ra_proxy.h"],
    deps = [
        "@com_github_brpc_brpc//:brpc",
        "@com_google_protobuf//:protobuf",
        "@sf_apis//:cc_sf_apis_proto",
        "@trustflow//trustflow/proxy/utils:ra_util",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
)

trustflow_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        ":ra_proxy",
        "@com_github_brpc_brpc//:brpc",
        "@trustflow//trustflow/proxy/utils:io_util",
        "@trustflow//trustflow/proxy/utils:log",
    ],
)
