# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@trustflow//bazel:trustflow.bzl", "trustflow_cc_library")

package(default_visibility = ["//visibility:public"])

trustflow_cc_library(
    name = "log",
    srcs = ["log.cc"],
    hdrs = ["log.h"],
    deps = [
        "@yacl//yacl/base:exception",
    ],
)

trustflow_cc_library(
    name = "io_util",
    srcs = ["io_util.cc"],
    hdrs = ["io_util.h"],
    deps = [
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/io/stream:file_io",
    ],
)

trustflow_cc_library(
    name = "crypto_util",
    srcs = ["crypto_util.cc"],
    hdrs = ["crypto_util.h"],
    deps = [
        "@com_google_protobuf//:protobuf",
        "@cppcodec",
        "@sf_apis//:cc_sf_apis_proto",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto:openssl_wrappers",
        "@yacl//yacl/crypto/envelope:digital_envelope",
        "@yacl//yacl/crypto/hmac:hmac_sha256",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/crypto/sign:rsa_signing",
        "@yacl//yacl/io/stream:file_io",
    ],
    alwayslink = True,
)

trustflow_cc_library(
    name = "ra_util",
    srcs = ["ra_util.cc"],
    hdrs = ["ra_util.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@cppcodec",
        "@sf_apis//:cc_sf_apis_proto",
        "@trustflow//trustflow/attestation/generation/wrapper:generator_wrapper",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
)
