[package]
name = "kuscia_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
prost = "0.11"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
prost-wkt = "0.4"
prost-wkt-types = "0.4"

[build-dependencies]
prost-build = "0.12.1"
prost-wkt-build = "0.4"
