# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@trustflow//bazel:trustflow.bzl", "trustflow_cc_library")

package(default_visibility = ["//visibility:public"])

trustflow_cc_library(
    name = "csv_generator",
    srcs = ["csv_generator.cc"],
    hdrs = ["csv_generator.h"],
    deps = [
        "//trustflow/attestation/collateral:hygon_collateral",
        "//trustflow/attestation/common:constants",
        "//trustflow/attestation/generation/interface:generator",
        "//trustflow/attestation/utils:json2pb",
        "@com_google_absl//absl/strings",
        "@cppcodec",
        "@trustflow//:hygon_csv_header",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto/hash:hash_utils",
        "@yacl//yacl/crypto/hmac:hmac_sm3",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/utils:scope_guard",
    ],
)
