# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@trustflow//bazel:trustflow.bzl", "trustflow_cc_library", "trustflow_cc_test")

package(default_visibility = ["//visibility:public"])

trustflow_cc_library(
    name = "csv_verifier",
    srcs = ["csv_verifier.cc"],
    hdrs = ["csv_verifier.h"],
    deps = [
        "//trustflow/attestation/common:constants",
        "//trustflow/attestation/utils:json2pb",
        "//trustflow/attestation/verification/interface:verifier",
        "@com_google_absl//absl/strings",
        "@cppcodec",
        "@sf_apis//:cc_sf_apis_proto",
        "@trustflow//:hygon_csv_header",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto:openssl_wrappers",
        "@yacl//yacl/crypto/sign:sm2_signing",
    ],
)

